samples/_failures_safe/1760887406_4d8854_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56f62b17.c: In function ‘main’:
./samples/SAFE/__tmp_56f62b17.c:163:47: error: expected ‘)’ at end of input
  163 |         if (scanf("%d %d %d", &u, &v, &weight)
      |            ~                                  ^
      |                                               )
./samples/SAFE/__tmp_56f62b17.c:163:9: error: expected declaration or statement at end of input
  163 |         if (scanf("%d %d %d", &u, &v, &weight)
      |         ^~
./samples/SAFE/__tmp_56f62b17.c:163:9: error: expected declaration or statement at end of input
